// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TinyMCE Controls Modal modal is opened and view is circle 1`] = `
<Modal
  className="component_web_stories_mce_model"
  closeButtonLabel="Close"
  onRequestClose={[Function]}
  shouldCloseOnClickOutside={false}
  title="Web Stories"
>
  <Select
    label="Select View Type"
    onChange={[Function]}
    options={Array []}
  />
  <TinyMCEToggle
    field="title"
  />
  <TinyMCEToggle
    field="excerpt"
  />
  <TinyMCEToggle
    field="author"
  />
  <TinyMCEToggle
    field="date"
  />
  <TinyMCEToggle
    field="image_align"
  />
  <TinyMCEToggle
    field="sharp_corners"
  />
  <TinyMCEToggle
    field="archive_link"
    fieldObj={
      Object {
        "show": true,
      }
    }
  />
  <TextControl
    label="Archive Link Label"
    onChange={[Function]}
  />
  <Range
    label="Number of Stories"
    max={20}
    min={1}
    onChange={[Function]}
  />
  <Range
    label="Circle Size"
    max={200}
    min={80}
    onChange={[Function]}
    step={5}
  />
  <Range
    label="Number of Columns"
    max={4}
    min={1}
    onChange={[Function]}
  />
  <Select
    label="Select Order"
    onChange={[Function]}
    options={Array []}
  />
  <div
    className="alignright"
    style={
      Object {
        "padding": "20px 0",
      }
    }
  >
    <Button
      isPrimary={true}
      onClick={[Function]}
    >
      Okay
    </Button>
    <Button
      onClick={[Function]}
    >
      Cancel
    </Button>
  </div>
</Modal>
`;

exports[`TinyMCE Controls Modal modal is opened and view is non-circle 1`] = `
<Modal
  className="component_web_stories_mce_model"
  closeButtonLabel="Close"
  onRequestClose={[Function]}
  shouldCloseOnClickOutside={false}
  title="Web Stories"
>
  <Select
    label="Select View Type"
    onChange={[Function]}
    options={Array []}
  />
  <TinyMCEToggle
    field="title"
  />
  <TinyMCEToggle
    field="excerpt"
  />
  <TinyMCEToggle
    field="author"
  />
  <TinyMCEToggle
    field="date"
  />
  <TinyMCEToggle
    field="image_align"
  />
  <TinyMCEToggle
    field="sharp_corners"
  />
  <TinyMCEToggle
    field="archive_link"
    fieldObj={
      Object {
        "show": true,
      }
    }
  />
  <TextControl
    label="Archive Link Label"
    onChange={[Function]}
  />
  <Range
    label="Number of Stories"
    max={20}
    min={1}
    onChange={[Function]}
  />
  <Range
    label="Number of Columns"
    max={4}
    min={1}
    onChange={[Function]}
  />
  <Select
    label="Select Order"
    onChange={[Function]}
    options={Array []}
  />
  <div
    className="alignright"
    style={
      Object {
        "padding": "20px 0",
      }
    }
  >
    <Button
      isPrimary={true}
      onClick={[Function]}
    >
      Okay
    </Button>
    <Button
      onClick={[Function]}
    >
      Cancel
    </Button>
  </div>
</Modal>
`;
